<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="ivGalleryDesc">Captured Image</string>
    <string name="etCaption">Caption</string>
    <string name="prevButtLabel">prev</string>
    <string name="takePicLabel">snap</string>
    <string name="nextButtLabel">next</string>
    <string name="uploadButtLabel">upload</string>
    <string name="searchButtLabel">search</string>
    <string name="fromDateLabel">From:</string>
    <string name="toDateLabel">To:</string>
    <string name="etFromDateHint">Date to Start Searching</string>
    <string name="etToDateHint">Date to Stop Searching</string>
    <string name="keywordsLabel">Keywords:</string>
    <string name="keywordsHint">Contained in Caption</string>
    <string name="latitudeLabel">Latitude:</string>
    <string name="longitudeLabel">Longitude:</string>
    <string name="imgLatHint">Image Location Lat.</string>
    <string name="imgLngHint">Image Location Lng.</string>
    <string name="cancelButtLabel">Cancel</string>
    <string name="goButtLabel">Go</string>
</resources>