<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Views.MainActivity">

    <LinearLayout
        android:id="@+id/photoInfo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/etCaption"
        android:layout_alignStart="@id/etCaption"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:text="" />

        <TextView
            android:id="@+id/tvPhotoLocation"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivGallery"
        android:layout_width="356dp"
        android:layout_height="265dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/ivGalleryDesc"
        />

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivGallery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints="Caption"
        android:hint="@string/etCaption"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="" />

    <LinearLayout
        android:id="@+id/photoID"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/etCaption"
        android:layout_alignStart="@id/etCaption"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tvPhotoID"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/photoButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/photoID"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scrollPhotos"
            android:text="@string/prevButtLabel"
            style="?android:buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/snap"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:onClick="takePhoto"
            android:text="@string/takePicLabel"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="scrollPhotos"
            android:text="@string/nextButtLabel"
            style="?android:buttonBarButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:onClick="sharePhotos"
            style="?android:buttonBarButtonStyle"
            android:text="@string/uploadButtLabel"/>


        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="searchPhotos"
            android:text="@string/searchButtLabel"
            style="?android:buttonBarButtonStyle"/>

    </LinearLayout>

</RelativeLayout>